--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@prisma/client": "^6.10.1",
     "@prisma/extension-accelerate": "^2.0.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
