--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^18.3.0",
+    "swiper": "^11.2.10",
     "zod": "^3.25.67"
   },
   "devDependencies": {
