--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.0.1",
     "stripe": "^18.3.0",
     "swiper": "^11.2.10",
     "zod": "^3.25.67"
