--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^3.8.0",
     "@stripe/stripe-js": "^7.6.1",
     "bcrypt": "^6.0.0",
+    "canvas-confetti": "^1.9.3",
     "cloudinary": "^2.7.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
