--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^6.0.1",
