--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "canvas-confetti": "^1.9.3",
     "cloudinary": "^2.7.0",
+    "framer-motion": "^12.23.12",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
