full reuse flow, quality of life changes

--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-  "name": "derby-days",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
-    "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^6.10.1",
-    "@prisma/extension-accelerate": "^2.0.1",
-    "@stripe/react-stripe-js": "^3.8.0",
-    "@stripe/stripe-js": "^7.6.1",
-    "bcrypt": "^6.0.0",
-    "canvas-confetti": "^1.9.3",
-    "cloudinary": "^2.7.0",
-    "framer-motion": "^12.23.12",
-    "next": "15.3.4",
-    "next-auth": "^5.0.0-beta.29",
-    "next-cloudinary": "^6.16.0",
-    "postcss": "^8.5.6",
-    "pusher": "^5.2.0",
-    "pusher-js": "^8.4.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "resend": "^6.0.1",
-    "stripe": "^18.3.0",
-    "swiper": "^11.2.10",
-    "yet-another-react-lightbox": "^3.25.0",
-    "zod": "^3.25.67"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "daisyui": "^5.0.43",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "prisma": "^6.10.1",
-    "tailwindcss": "^4.1.11",
-    "tsx": "^4.20.3",
-    "typescript": "^5"
-  }
+    "name": "derby-days",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "db:backup": "pg_dump $DATABASE_URL --data-only --inserts > dump.sql",
+        "db:restore": "psql $DATABASE_URL -f dump.sql",
+        "db:reset": "prisma migrate reset --force"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^2.10.0",
+        "@heroicons/react": "^2.2.0",
+        "@prisma/client": "^6.10.1",
+        "@prisma/extension-accelerate": "^2.0.1",
+        "@stripe/react-stripe-js": "^3.8.0",
+        "@stripe/stripe-js": "^7.6.1",
+        "bcrypt": "^6.0.0",
+        "canvas-confetti": "^1.9.3",
+        "cloudinary": "^2.7.0",
+        "framer-motion": "^12.23.12",
+        "next": "15.3.4",
+        "next-auth": "^5.0.0-beta.29",
+        "next-cloudinary": "^6.16.0",
+        "postcss": "^8.5.6",
+        "pusher": "^5.2.0",
+        "pusher-js": "^8.4.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "resend": "^6.0.1",
+        "stripe": "^18.3.0",
+        "swiper": "^11.2.10",
+        "yet-another-react-lightbox": "^3.25.0",
+        "zod": "^3.25.67"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.1.11",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "daisyui": "^5.0.43",
+        "eslint": "^9",
+        "eslint-config-next": "15.3.4",
+        "prisma": "^6.10.1",
+        "tailwindcss": "^4.1.11",
+        "tsx": "^4.20.3",
+        "typescript": "^5"
+    }
 }
